--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
       </div>
       <div class="col-sm-4">
         <h1 class="text-center">Burgers Tracker App!</h1>
-        <img class="rounded mx-auto d-block" height="300px" width="100%" src="http://pngimg.com/uploads/burger_sandwich/burger_sandwich_PNG4114.png">
+        <img class="rounded mx-auto d-block" height="300px" width="100%" src="https://video-images.vice.com/articles/5ac53328a1e6180008345f98/lede/1522873279699-DZsqULvXUAIyJBw.jpeg?crop=1xw%3A0.6832740213523132xh%3Bcenter%2Ccenter&resize=650%3A*&output-quality=55">
       </div>
       <div class="col-sm-4">
 
@@ -19,7 +19,7 @@
   <h2>Burgers I want to eat.</h2>
       <ul>
         {{#each burgers}}
-        {{#unless eaten}}
+        {{#unless devoured}}
         <li>
 	{{name}}
 
@@ -40,7 +40,7 @@
 
       <ul>
         {{#each burgers}}
-        {{#if eaten}}
+        {{#if devoured}}
        <li id="li2">
 	{{name}}
 	
@@ -60,12 +60,6 @@
         <div class="form-group">
           <label for="ca">Burger Name:</label>
           <input type="text" id="ca" name="name">
-        </div>
-
-        <div class="form-group">
-          <label for="eaten">Eaten?</label><br>
-          <input type="radio" name="eaten" value="1" checked> Devoured<br>
-          <input type="radio" name="eaten" value="0"> To Eat
         </div>
 
         <button type="submit">Add Burger</button>
